  for S3Bucket and S3Object MBeans is disabled by default, to enable this
  reporting set the following system properties to "true": 
  "jets3t.bucket.mx", "jets3t.object.mx"
- Added method getAccountOwner() to S3Service which allows you to look up the
  ID and display name of an S3 account's owner, even if the account contains
  no buckets.

  * REST Implementation

- Fixed a configuration error that caused the REST implementation to be limited
  to 20 simultaneous connections, regardless of the "httpclient.max-connections" 
  property setting. Now the HttpClient connection manager settings 
  "max-per-host" and "max-total" are both set according to the JetS3t property
  "httpclient.max-connections".

KUDOS TO:

Laxmilal Menaria of Chambal.com Inc. for a patch that contributed to the new 
S3Service#getAccountOwner feature.

Doug MacEachen of Hyperic.com for contributing the bulk of a JMX instrumentation
implementation.


-------------
Version 0.7.0
-------------

COCKPIT
- Added ability to view and manage Amazon CloudFront distributions using
  a dialog box.
- Added support for configuring Requester Pays buckets.
- Improved support for DevPay credentials, which can now be set and saved 
  directly in the login dialog box instead of only in a properties file.
- User preferences can now be remembered on your computer, so they do not need
  to be re-set every time you start Cockpit.
- Improved dialog box for generating Signed URLs. URLs for multiple objects
  can now be generated at once.

SYNCHRONIZE
- AWS credentials and the cryptographic password can now be provided via prompts
  on the command-line, rather than merely through a properties file.
- Added the --credentials option, which allows AWS credentials to be loaded from 
  an encrypted file rather than an insecure properties file. The encrypted file 
  can be created with the AWSCredentials API or the Cockpit application.
- Synchronize will act as an anonymous client if empty values are provided